# text2uml

./: .gitignore  Full pipeline.ipynb  Full pipeline.py  Pipfile  README.md  classification.py  pyproject.toml  run_pipeline.py  summarization.py  try bert.ipynb
data/: Create bucketing validation set.ipynb
models/: IOB classifier.ipynb
