[tool.poetry]
name = "text2uml"
version = "0.1.0"
description = "Improved version of existing text2uml (2022)"
authors = ["Raymond Wangsa Putra <rwp1byte@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"




[tool.poetry.dependencies]
python = "^3.9"
windows-booknlp = "0.0.3"
nltk = "3.9.1"
pandas = "1.5.3"
numpy = "1.26.4"
spacy = "3.4.4"
ipykernel = "6.29.5"
scikit-learn = "1.0.1"
sklearn-crfsuite = "0.3.6"
gensim = "4.3.3"
ipywidgets = "8.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
